@@ -51,7 +51,8 @@ Post-v2.7.0
    - Add --cleanup option to command 'ovs-appctl exit' (see ovs-vswitchd(8)).
    - L3 tunneling:
      * Add "layer3" options for tunnel ports that support non-Ethernet (L3)
-       payload (GRE).
+       payload (GRE, VXLAN-GPE).
+     * New vxlan tunnel extension "gpe" to support VXLAN-GPE tunnels.
      * Transparently pop and push Ethernet headers at transmit/reception
        of packets to/from L3 tunnels.
 
